--- a/activity/templates/index_bs.html
+++ b/activity/templates/index_bs.html
@@ -1,27 +1,25 @@
 {% extends "base_bs.html" %}
 {% block content %}
+<div class="jumbotron">
+    <div class="jumbo-text" style="color: white; text-align: center">
+        <h1 class="display-4">Have Plans?</h1>
+        <p>Don't worry, Docent does.</p>
+    </div>
+</div>
+<nav class="nav nav-pills nav-fill">
+    <a id="enterntainment" class="nav-item nav-link category" href="{% url 'category'%}?type=entertainment">Entertainment</a>
+    <a id="music" class="nav-item nav-link category" href="{% url 'category'%}?type=music">Music</a>
+    <a id="food" class="nav-item nav-link category" href="{% url 'category'%}?type=food">Food and Drink</a>
+    <a id="sports" class="nav-item nav-link category" href="{% url 'category'%}?type=sports">Sports</a>
+    <a id="other" class="nav-item nav-link category" href="{% url 'category'%}?type=other">Other</a>
+</nav>
 <br />
+
 <div class="cols">
     <div class="container mt-4">
         <div class="row">
-            {% for activity in save_list %}
-            <div class="col-auto mb-3">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="..." alt="Card image cap">
-                    <div class="card-body">
-                        <h5 class="card-title">{{activity.name}}</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ activity.address_1 }}</h6>
-                        <p class="card-text">{{ activity.phone_number }}</p>
-                        {% if user.is_authenticated %}
-                        {% if activity in saved_list %}
-                        <a class="card-link likebutton" href="#" data-catid="{{ activity.ID }}"><i class="fa fa-star"></i></a>
-                        {% else %}
-                        <a class="card-link likebutton" href="#" data-catid="{{ activity.ID }}"><i class="fa fa-star-o"></i></a>
-                        {% endif %}
-                        {% endif %}
-                    </div>
-                </div>
-            </div>
+            {% for activity in activity_list %}
+            {% include "activity_bs.html" with activity=activity %}
             {% endfor %}
         </div>
     </div>
