--- a/activity/templates/index_bs.html
+++ b/activity/templates/index_bs.html
@@ -1,7 +1,7 @@
 {% extends "base_bs.html" %}
 {% block content %}
 <div class="jumbotron">
-    <div class="jumbo-text" style="color: white; text-align: center">
+    <div class="jumbo-text .animated .fadeUpBig" style="color: white; text-align: center">
         <h1 class="display-4">Have Plans?</h1>
         <p>Don't worry, Docent does.</p>
     </div>
