--- a/activity/static/css/bs.css
+++ b/activity/static/css/bs.css
@@ -1,7 +1,3 @@
-ul.dropdown-lr {
-    width: 300px;
-  }
-  
   /* mobile fix */
   @media (max-width: 768px) {
       .dropdown-lr h3 {
@@ -23,3 +19,24 @@ ul.dropdown-lr {
 .dropdown-menu {
     width: 300px;
 }
+@keyframes jumbo-text-animate {
+    0% {
+        opacity:0;
+        transform:  translate(0px,40px)  ;
+    }
+    100% {
+        opacity:1;
+        transform:  translate(0px,0px)  ;
+    }
+}
+.jumbo-text {
+    animation-name: jumbo-text-animate;
+    animation-duration: 1s;
+}
+.absolute-center {
+    margin: auto;
+    position: relative;
+    left: 0; 
+    right: 0;
+  }
+  
