--- a/activity/templates/activity_bs.html
+++ b/activity/templates/activity_bs.html
@@ -1,4 +1,4 @@
-<div class="col-auto mb-3">
+<div class="mb-3 ml-2 mr-2">
     <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="#" alt="Card image cap">
         <div class="card-body">
