--- a/activity/templates/category_bs.html
+++ b/activity/templates/category_bs.html
@@ -2,25 +2,23 @@
 {% block content %}
 <div class="jumbotron">
     <div class="jumbo-text" style="color: white; text-align: center">
-        <h1 class="display-4" >{{ type }}</h1>
+        <h1 class="display-4">{{ type }}</h1>
     </div>
 </div>
-    <nav class="nav nav-pills nav-fill">
-        <a id="enterntainment" class="nav-item nav-link category" href="{% url 'category'%}?type=entertainment">Entertainment</a>
-        <a id="music" class="nav-item nav-link category" href="{% url 'category'%}?type=music">Music</a>
-        <a id="food" class="nav-item nav-link category" href="{% url 'category'%}?type=food">Food and Drink</a>
-        <a id="sports" class="nav-item nav-link category" href="{% url 'category'%}?type=sports">Sports</a>
-        <a id="other" class="nav-item nav-link category" href="{% url 'category'%}?type=other">Other</a>
-    </nav>
-    <br />
+<nav class="nav nav-pills nav-fill">
+    <a id="enterntainment" class="nav-item nav-link category" href="{% url 'category'%}?type=entertainment">Entertainment</a>
+    <a id="music" class="nav-item nav-link category" href="{% url 'category'%}?type=music">Music</a>
+    <a id="food" class="nav-item nav-link category" href="{% url 'category'%}?type=food">Food and Drink</a>
+    <a id="sports" class="nav-item nav-link category" href="{% url 'category'%}?type=sports">Sports</a>
+    <a id="other" class="nav-item nav-link category" href="{% url 'category'%}?type=other">Other</a>
+</nav>
+<br />
 
-<div class="cols">
-    <div class="container mt-4">
-        <div class="row">
-            {% for activity in activity_list %}
-            {% include "activity_bs.html" with activity=activity %}
-            {% endfor %}
-        </div>
+<div class="container">
+    <div class="grid-row">
+        {% for activity in activity_list %}
+        {% include "activity_bs.html" with activity=activity %}
+        {% endfor %}
     </div>
 </div>
 {% endblock %}
