--- a/activity/templates/index_bs.html
+++ b/activity/templates/index_bs.html
@@ -15,13 +15,11 @@
 </nav>
 <br />
 
-<div class="cols">
-    <div class="container mt-4">
-        <div class="row">
+<div class="container">
+    <div class="grid-row">
             {% for activity in activity_list %}
             {% include "activity_bs.html" with activity=activity %}
             {% endfor %}
         </div>
     </div>
-</div>
 {% endblock %}
