--- a/activity/templates/profile.html
+++ b/activity/templates/profile.html
@@ -1,4 +1,4 @@
-{% extends "base_bs.html" %}
+{% extends "base.html" %}
 {% block content %}
 
 <div class="container">
@@ -38,7 +38,7 @@
 <div class="container">
     <div class="grid-row">
         {% for activity in activity_list %}
-        {% include "activity_profile_bs.html" with activity=activity %}
+        {% include "activity_profile.html" with activity=activity %}
         {% endfor %}
     </div>
 </div>
