Yelp works good now

--- a/activity/templates/activity_profile.html
+++ b/activity/templates/activity_profile.html
@@ -1,10 +1,12 @@
 <div class="mb-3 ml-2 mr-2">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 18rem; height: 317px;"">
         {% if activity.pic_url %}
-        <img class="card-img-top" src="{{activty.pic_url}}" alt="Activity Pic">
+        {% load static %}
+        <img class="card-img-top" src="../static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
         {% else %}
-        <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic">
-        {% endif %} <div class="card-body">
+        <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px" height="197px">
+        {% endif %}
+        <div class="card-body">
             <a class="removelike mark_{{ activity.ID }}" href="#" data-catid="{{ activity.ID }}" style="float: right;"
                 onclick="return false"><i class="fas fa-bookmark"></i></a>
             <h5 class="card-title">{{activity.name}}</h5>
