--- a/activity/templates/base.html
+++ b/activity/templates/base.html
@@ -58,6 +58,8 @@
                 <a href="{% url 'social:begin' 'google-oauth2' %}" style="text-align: center;">
                   <i class="fab fa-google"></i> Sign Up with Google</a>
                 <br />
+                <a href="{% url 'social:begin' 'facebook' %}"><i class="fab fa-facebook"></i> Sign Up with Facebook</a>
+                <br />
                 <br />
 
 
@@ -86,6 +88,8 @@
                   {% csrf_token %}
                   <a href="{% url 'social:begin' 'google-oauth2' %}">
                     <i class="fab fa-google"></i> Login with Google</a>
+                  <br />
+                  <a href="{% url 'social:begin' 'facebook' %}"><i class="fab fa-facebook"></i> Login with Facebook</a>
                   <br>
                   <div class="form-group">
                     <label for="username">Username</label>
