gotta love backlit_bonding

--- a/activity/static/css/bs.css
+++ b/activity/static/css/bs.css
@@ -13,7 +13,7 @@
       position: relative;
       height: 300px;
       padding-top: 100px;
-      background-image: linear-gradient(135deg, rgba(30, 33, 33, .82) 1%, rgba(32, 32, 32, .14) 98%), url('../images/banner.png');
+      background-image: linear-gradient(135deg, rgba(30, 33, 33, .82) 1%, rgba(32, 32, 32, .14) 98%), url('../images/backlit-bonding-casual-708392-p-1600.jpeg');
       background-position: 0px 0px, 50% 50%;
       background-size: auto, cover;
       padding-bottom: 0px;
