Fixing final stuff

--- a/activity/templates/activity.html
+++ b/activity/templates/activity.html
@@ -17,10 +17,8 @@
             {% endif %}
             {% endif %}
             <h5 class="card-title">{{activity.name}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted"><a herf="#"><i class="fas fa-location-arrow"></i></a> {{
-                activity.address1 }}</h6>
-            <p class="card-text"><a herf="tel:{{ activity.phone_number }}"><i class="fas fa-phone"></i></a> {{
-                activity.display_phone }}</p>
+            <h6 class="card-subtitle mb-2 text-muted"><a herf="#"><i class="fas fa-location-arrow"></i></a> {{ activity.address1 }}</h6>
+            <p class="card-text"><a herf="tel:{{ activity.phone_number }}"><i class="fas fa-phone"></i></a> {{ activity.display_phone }}</p>
         </div>
     </div>
 </div>
