--- a/activity/templates/activity.html
+++ b/activity/templates/activity.html
@@ -24,6 +24,7 @@
             <p class="card-text"><a herf="tel:{{ activity.phone_number }}"><i class="fas fa-phone"></i></a> {{ activity.display_phone }}</p>
         </div>
     </div>
+</div>
 
 
     <!--Modal-->
