--- a/activity/templates/activity.html
+++ b/activity/templates/activity.html
@@ -20,8 +20,8 @@
             {% endif %}
             {% endif %}
             <h5 class="card-title">{{activity.name}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted"><a herf="#"><i class="fas fa-location-arrow"></i></a> {{ activity.address1 }}</h6>
-            <p class="card-text"><a herf="tel:{{ activity.phone_number }}"><i class="fas fa-phone"></i></a> {{ activity.display_phone }}</p>
+            <h6 class="card-subtitle mb-2 text-muted"><a href="#"></a><i class="fas fa-location-arrow"></i> {{ activity.address1 }}</h6>
+            <p class="card-text"><a href="tel:{{ activity.phone_number }}"></a><i class="fas fa-phone"></i> {{ activity.display_phone }}</p>
         </div>
     </div>
 </div>
@@ -34,24 +34,27 @@
             <!--Modal content -->
             <div class="modal-content">
                 <div class="modal-header">
-                    <img class="card-img-top" src="#" alt="Card image cap">
-
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
                 </div>
                 <div class="modal-body">
-                    <h4 class="modal-title">{{activity.name}}</h4>
-                    <p>{{activity.address_1}}</p>
-                    <p>{{activity.phone_number}}</p>
-                    <p>hours here</p>
-                    <p>avg review</p>
-                    <button>Directions</button>
-                    <button>Purchase</button>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        {% if activity.pic_url %}
+                        {% load static %}
+                        <img class="card-img-top" src="static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
+                        {% else %}
+                        <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px"
+                            height="197px">
+                        {% endif %}
+                    <h4 class="modal-title card-title">{{activity.name}}</h4>
+                    <p class="card-subtitle mb-3 mt-2 text-muted"><a href="#"></a><i class="fas fa-location-arrow"></i> {{activity.address1}}</p>
+                    <p class="card-text"><a href="tel:{{ activity.phone_number }}"></a><i class="fas fa-phone"></i> {{activity.display_phone}}</p>
+                    <p><i class="fas fa-star"></i> Average Rating: {{ activity.avg_review }}</p>
+                    <button type="button" class="btn btn-primary">Directions</button>
+                    <button type="button" class="btn btn-primary">Purchase</button>
                 </div>
             </div>
-
         </div>
-
-
     </div>
+
+    
