--- a/activity/templates/activity_profile.html
+++ b/activity/templates/activity_profile.html
@@ -1,9 +1,10 @@
 <div class="mb-3 ml-2 mr-2">
-    <div class="card" style="width: 18rem; height: 340px;"">
+    <div class="card" style="width: 18rem; height: 340px;">
+            <a data-target="#modal_{{ activity.ID }}" data-toggle="modal" href="#modal_{{ activity.ID }}">
+
         {% if activity.pic_url %}
         {% load static %}
-        <img class="
-        card-img-top" src="../static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
+        <img class="card-img-top" src="../static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
         {% else %}
         <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px" height="197px">
         {% endif %}
@@ -16,3 +17,35 @@
         </div>
     </div>
 </div>
+
+<!--Modal-->
+<div class="modal fade" id="modal_{{ activity.ID }}" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered">
+
+            <!--Modal content -->
+            <div class="modal-content">
+                <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                </div>
+                <div class="modal-body">
+                     {% if activity.pic_url %}
+                     {% load static %}
+                    <img class="card-img-top" src="../static/media/{{ activity.pic_url }}" alt="Activity Pic" width="286px" height="197px">
+                    {% else %}
+                    <img class="card-img-top" src="../../static/images/default.png" alt="Default Activity Pic" width="286px" height="197px">
+                    {% endif %}
+                    <h4 class="modal-title card-title">{{activity.name}}</h4>
+                    <p class="card-subtitle mb-3 mt-2 text-muted"><a href="#"></a><i class="fas fa-location-arrow"></i> {{activity.address1}}</p>
+                    <p class="card-text"><a href="tel:{{ activity.phone_number }}"></a><i class="fas fa-phone"></i> {{activity.display_phone}}</p>
+                    <p><i class="fas fa-star"></i> Average Rating: {{ activity.avg_review }}</p>
+                    <button type="button" class="btn btn-primary">Directions</button>
+                    <button type="button" class="btn btn-primary">Purchase</button>
+                </div>
+            </div>
+
+        </div>
+
+
+    </div>
